hphp/hack/test/typecheck/instanceof/instanceof_parent.php.exp
File "instanceof_parent.php", line 16, characters 15-20:
A type specifier is expected here. (Parsing[1002])
File "instanceof_parent.php", line 16, characters 15-20:
Encountered unexpected text `parent`, was expecting a type hint. (Parsing[1002])
